...
    <string name="add_another">Add Another</string>
    <string name="aisle_name">Aisle Name</string>
    <string name="id_label">id</string>
    <string name="done">Done</string>
    <string name="search_product_hint">Search Products…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Delete %1$s?</string>
    <string name="edit_aisle">Edit Aisle</string>
    <string name="edit_location">Edit Shop</string>
    <string name="main_fab">Main FAB</string>
    <string name="add_shop_fab">Add Shop FAB</string>
    <string name="add_aisle_fab">Add Aisle FAB</string>
    <string name="add_product_fab">Add Product FAB</string>
...
    <string name="mnu_sort_list_by_name">Sort by name</string>
    <string name="sort_confirm_title">Confirm Sort</string>
    <string name="sort_confirm_message">Sorting by name will rearrange the list alphabetically and overwrite your current sort order. Do you want to proceed?</string>
    <string name="new_entity_name">New Entity Name</string>
    <string name="new_location_name">New Location Name</string>
    <string name="new_product_name">New Product Name</string>
    <string name="copy_entity_title">Copy %1$s</string>
    <string name="entity_copied">%1$s copied</string>
    <string name="entity_name_required">Name cannot be empty</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="today_recommendations">Today\'s Recommendations</string>
...
