<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnu_edit_shop_list_item"
        android:title="@string/edit"
        android:icon="@drawable/baseline_edit_24"
        app:showAsAction="ifRoom"
        android:menuCategory="container" />
    <item
        android:id="@+id/mnu_delete_shop_list_item"
        android:title="@string/delete"
        android:icon="@drawable/baseline_delete_24"
        app:showAsAction="never"
        android:menuCategory="secondary" />

    <item
        android:id="@+id/mnu_copy_shop_list_item"
        android:title="@android:string/copy"
        android:icon="@drawable/baseline_content_copy_24"
        app:showAsAction="never"
        android:menuCategory="secondary" />
</menu>