<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/txt_shop_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/shop_name"
    android:theme="@style/Theme.Aisleron.NavigationDrawer"
    app:drawableStartCompat="@drawable/baseline_store_24"
    android:textAppearance="?attr/textAppearanceListItem" />
